[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Svitlana Glibova"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "3.8.4"
blue = "^0.7.0"
isort = "^5.10.1"
pre-commit = "^2.17.0"
mypy = "^0.931"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
